modify home image

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -256,13 +256,12 @@ h4{
 }
 /*******************home************/
 .home{
-    position: relative;
     width: 100%;
     min-height: 100vh;
     background-image:url(../IMG/imgPortafolio03.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     background-attachment: fixed;
 }
 .center-box{
