--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -256,6 +256,7 @@ h4{
 }
 /*******************home************/
 .home{
+    position: relative;
     width: 100%;
     min-height: 100vh;
     background-image:url(../IMG/imgPortafolio03.png);
