--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,11 +1,11 @@
 :root{
-    --orange-color:#f55422;
+    --orange-color:#de9455;
     --blue-color:#11141b;
     --blue-color02:#151921;
     --white-color:#fff;
     --white-alpha-color:rgba(255,255,255,0.06);
     --gray-color:#bebebe;
-    --blue-alpha-color:rgba(17,20,27,0.8);
+    --blue-alpha-color:rgba(34,40,54,0.65);
     --font-poppins:'Poppins', 'sans-serif';
     --font-open-sans:'Open Sans', 'sans-serif';
     --transition-color:color .4s ease;
@@ -16,9 +16,6 @@ html{
     font-size: 16px;
     scroll-behavior: smooth;
 }
-
-
-
 *,*::after,*::before{
     box-sizing: inherit;
     padding: 0;
@@ -77,6 +74,10 @@ h4{
 }
 
 /*************header*********************/
+.logo img{
+    width: 50px;
+    height: auto;
+}
 .header{
     position: fixed;
     width: 100%;
@@ -121,19 +122,22 @@ h4{
     font-size: 14px;
     transition: all .4s ease ;
 }
-.menu-link.logo {
+.menu-link{
+    border-bottom: solid 2px var(--white-alpha-color);
+}
+.menu .logo {
     text-align: center;
     padding:3rem 1rem;
 }
-.menu-link:not(.menu-link.logo){
-    border-bottom: solid 2px var(--white-alpha-color);
-}
+
 .menu-link[aria-current="page"]{
     border-color: var(--orange-color) !important ;
     color: var(--orange-color);
     background-color: var(--white-alpha-color);
     font-weight: 600;
 }
+
+
 /***************hamburger*************/
 .hamburger{
     display: flex;
@@ -152,7 +156,7 @@ h4{
     display: block;
 }
 
-.hamburger .line,.hamburger::after,.hamburger::before{
+.hamburger .line-ham,.hamburger::after,.hamburger::before{
     width: 2rem;
     height: 2px;
     position: absolute;
@@ -160,49 +164,37 @@ h4{
 
 }
 .hamburger::before{
-    transform-origin: 0;
     top: 25%;
     transition: transform .4s ease;
 }
 .hamburger::after{
-    transform-origin: 0;
     bottom: 25%;
     transition: transform .4s ease;
 }
-.hamburger .line{
+.hamburger .line-ham{
     top: 50%;
     transform: translateY(-50%);
     transition: transform .4s ease;
 }
-.hamburger.active .line{
+.hamburger.active .line-ham{
     display: none;
 }
 .hamburger.active::before{
-    transform:rotate(45deg) translate(0,-1px) ;
-    left: 25%;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg) ;
 }
 .hamburger.active::after{
-    transform:rotate(-45deg) ;
-    left: 25%;
+    bottom: 50%;
+    transform: translateY(50%) rotate(-45deg) ;
 }
 /**************Line title***************/
-.title-line{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-.title-line [class^='line']{
-    width: 60px;
-    height: 2px;
-    background-color: var(--white-alpha-color);
-}
+
 .circule{
     position: relative;
+    display: inline-block;
     width: 1rem;
     height: 1rem;
     background-color: var(--white-alpha-color);
-    margin: 0 1rem;
     border-radius: 50%;
 }
 .circule::before{
@@ -211,18 +203,44 @@ h4{
     display: block;
     width: 6px;
     height: 6px;
-    left: 5px;
-    right: 5px;
-    top: 5px;
-    bottom: 5px;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%,50%);
     border-radius: 50%;
     background-color: var(--orange-color);
 }
+.line{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: .5rem;
+}
+.line::before,.line::after{
+    content: '';
+    position: absolute;
+    display: inline-block;
+    width: 40%;
+    height: 2px;
+    background-color: var(--white-alpha-color);
+    bottom: 50%;
+    transform: translateY(50%);
+}
+.line::after{
+    right: 0;
+}
+.line::before{
+    left: 0;
+}
+
 /***********titles***********/
-.section-title{
-    width: 100%;
+.title{
+    width: max-content;
     text-align: center;
-    margin-bottom: 3.5rem;
+    margin-bottom: 4rem;
+}
+.title h2{
+    text-transform: uppercase;
 }
 /*********Buttom hover*********/
 .hover-bg-orange{
@@ -245,43 +263,40 @@ h4{
     transition:all 1s ease ;
     z-index: -1;
 }
-.hover-bg-orange:hover::before{
-    width: 300px;
-    height: 300px;
-}
-
 /*****mascara transparente****/
 .transparent-mask{
     width: 100%;
     height: inherit;
     background-color: var(--blue-alpha-color);
 }
+/******centrar caja*********/
+.center{
+    width: inherit;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/****contenido *********/
+.content{
+    color: var(--white-color);
+    text-align: center;
+}
 /*******************home************/
 .home{
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image:url(../IMG/imgPortafolio03.png);
+    background-image:url("/assets/IMG/imgPortafolio03.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
 }
-.center-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: inherit;
-    height: inherit;
-}
-.text-box{
-    color: var(--white-color);
-    text-align: center;
-}
-.text-box h3,.text-box h1{
+.content h3,.content h1{
     margin-bottom: 2rem;
 }
-.text-box h3{
+.content h3{
     opacity: .8;
     font-weight: 400;
     font-size: 20px;
@@ -300,9 +315,6 @@ h4{
     padding: .5rem 1rem;
     color: var(--white-color);
     transition: var(--transition-color);
-}
-.social-media-link:hover{
-    color: var(--gray-color);
 }
 .about-view-work{
     display: flex;
@@ -326,10 +338,6 @@ h4{
     background-color: var(--white-alpha-color);
     transition: var(--transition-color);
 }
-.about-view-work .btn-view-work:hover{
-    color: var(--white-color);
-}
-
 .web-developer{
     display: block;
     white-space: nowrap;
@@ -346,7 +354,6 @@ h4{
         width:100% ;
     }
 }
-
 .separator{
     width: 100%;
     position: absolute;
@@ -357,13 +364,15 @@ h4{
     height: auto;
     margin-bottom: -9px;
 }
-
-/*about*/
+/*************about************/
 .about{
     width: 100%;
     height: auto;
     background-color: var(--blue-color);
-    padding: 5rem 0 7rem;
+    padding: 5rem 0 6rem;
+}
+.about .center{
+    flex-direction: column;
 }
 .about .center-box{
     flex-direction: column;
@@ -371,28 +380,10 @@ h4{
     align-items: inherit;
 }
 .data-about{
+    width: 100%;
     display: flex;
     flex-direction: column;
-}
-.image-about-content{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 3rem;
-    height: auto;
-}
-.image-size{
-    width: 200px;
-    height:200px;
-    border-radius: 50%;
-    padding: .5rem;
-    background-color: var(--blue-color02);
-    transition: width .3s ease,height .3s ease;
-}
-.image-size img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
+    gap: 3rem;
 }
 .about-content h3{
     margin-bottom: 1rem;
@@ -423,6 +414,30 @@ h4{
     font-size: 13px;
     border-radius: 2rem;
 }
+.profile-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+.profile-image-border{
+    width: 200px;
+    height:200px;
+    border-radius: 50%;
+    background-color: var(--white-alpha-color);
+    transition: width .3s ease,height .3s ease;
+}
+.profile-image-border img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.profile-image-border{
+    border: solid 5px var(--blue-color);
+    border-bottom-color: var(--white-alpha-color);
+    border-left-color:  var(--white-alpha-color);
+}
 
 /**********skills*****************/
 .skills{
@@ -435,10 +450,14 @@ h4{
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
+.skills .center{
+    flex-direction: column;
+}
 .skills .transparent-mask{
-    padding: 7rem 0;
+    padding: 6rem 0;
 }
 .list-skills{
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(1,1fr);
     gap: 3rem;
@@ -532,6 +551,130 @@ animation: progreswordpress 2s ease both;
     }
 }
 
+/*******experiences*********/
+.experiences{
+    width: 100%;
+    padding: 7rem 0;
+    background-color: var(--blue-color);
+}
+.experiences .center{
+    flex-direction: column;
+}
+
+.data-experiences{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 2rem;
+}
+.experience{
+    padding-left: 3.5rem;
+}
+.experience-content{
+    position: relative;
+    padding: 1rem;
+    border-left: solid 2px var(--orange-color);
+}
+
+.experience-content .position{
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: .5rem;
+    line-height: 1;
+    
+}
+.experience-content .years,.experience-content .company-name{
+    display: inline-block;
+    line-height: 1;
+    font-size: 14px;
+}
+.experience-content .years{
+    padding-right: .35rem;
+}
+.experience-content .company-name{
+    color:var(--gray-color);
+    padding-left: .5rem;
+    border-left:solid 1px var(--gray-color);
+    text-transform: capitalize;
+}
+.experience-content .description{
+    padding: 1rem 0;
+    margin-top: .5rem;
+    border-top: solid thin var(--white-alpha-color);
+    line-height: 1;
+    font-size: 14px;
+}
+.experience-content .icon-experience{
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    background-color:var(--orange-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: 1rem;
+    left: -3.5rem;
+}
+.experience-content .icon-experience::before{
+    position: absolute;
+    content: '';
+    display: inline-block;
+    width: 1.5rem;
+    height: 2px;
+    right: -20px;
+    background-color: var(--orange-color);
+}
+/************portfolio*****************/
+.portfolio{
+    width: 100%;
+    background-image:url(https://images.unsplash.com/photo-1520583457224-aee11bad5112?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80) ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+.portfolio .transparent-mask{
+    padding: 6rem 0;
+}
+.portfolio .center{
+    flex-direction: column;
+}
+.portfolio-list{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 2rem;
+}
+.portfolio-list .item{
+    height: 300px;
+    border-radius: .5rem;
+    position: relative;
+}
+.portfolio-list .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    border-radius: .5rem;
+}
+.portfolio-list .item .img-movil{
+    position: absolute;
+    bottom: 0;
+    right: -1rem;
+    height: 70%;
+    width: auto;
+}
+.portfolio-list .item .img-movil img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
 
 
 
@@ -560,7 +703,16 @@ animation: progreswordpress 2s ease both;
     .list-skills{
         grid-template-columns: repeat(2,1fr);
     }
-
+    .profile-image-border{
+        width: 250px;
+        height: 250px;
+    }
+    .data-experiences{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .portfolio-list{
+        grid-template-columns: repeat(2,1fr);
+    }
 
 
 }
@@ -585,7 +737,7 @@ animation: progreswordpress 2s ease both;
     .menu-link[aria-current="page"]{
         background-color: transparent;
     }
-    .menu-link.logo{
+    .menu .logo{
         display: none;
     }
     .hamburger{
@@ -597,17 +749,25 @@ animation: progreswordpress 2s ease both;
         align-items: center;
         gap: 5rem;
     }
-    .image-about-content{
+    .profile-image{
         display: block;
         margin-bottom: 0;
         text-align: center;
     }
-    .image-size{
+    .profile-image-border{
         width: 350px;
-        height:350px;
-        padding: 1rem;
+        height: 350px;
     }
-
+    .hover-bg-orange:hover::before{
+        width: 300px;
+        height: 300px;
+    }
+    .social-media-link:hover{
+        color: var(--gray-color);
+    }
+    .portfolio-list{
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 @media(min-width:1200px){
     .container{
