--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -287,7 +287,7 @@ h4{
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image:url("/assets/IMG/imgPortafolio03.png");
+    background-image:url("../IMG/imgPortafolio03.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
