description about me

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -474,6 +474,9 @@ h4{
     width: 100%;
     margin-bottom: 1rem;
     opacity: .7;
+    font-weight: 400;
+    font-family: var(--font-open-sans);
+    font-size: 15px;
 }
 .skill .progress{
     width: 100%;
@@ -496,17 +499,17 @@ width: 85%;
 animation: progressHTML 2s ease both;
 }
 .javascript.animar{
-width: 60%;
+width: 70%;
 animation: progressjava 2s ease both;
 
 }
 .php.animar{
-width: 60%;
+width: 65%;
 animation: progressphp 2s ease both;
 
 }
 .css.animar{
-width: 70%;
+width: 80%;
 animation: progresscss 2s ease both;
 
 }
@@ -514,6 +517,18 @@ animation: progresscss 2s ease both;
 width: 75%;
 animation: progreswordpress 2s ease both;
 
+}
+.desing.animar{
+    width: 50%;
+    animation: progressdesing;
+}
+.git.animar{
+    width: 75%;
+    animation: progressgit 2s ease both;
+}
+.sql.animar{
+    width: 85%;
+    animation: progressql 2s ease both;
 }
 @keyframes progressHTML {
     0%{
@@ -528,7 +543,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width:60%;
+        width:70%;
     }
 }
 @keyframes progressphp {
@@ -536,7 +551,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width:60%;
+        width:65%;
     }
 }
 @keyframes progresscss {
@@ -544,7 +559,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width:70%;
+        width:80%;
     }
 }
 @keyframes progreswordpress {
@@ -553,6 +568,30 @@ animation: progreswordpress 2s ease both;
     }
     100%{
         width:75%;
+    }
+}
+@keyframes progressgit {
+    0%{
+        width: 0;
+    }
+    100%{
+        width: 75%;
+    }
+}
+@keyframes progressql {
+    0%{
+        width: 0;
+    }
+    100%{
+        width: 85%;
+    }
+}
+@keyframes progressdesing {
+    0%{
+        width: 0;
+    }
+    100%{
+        width: 50%;
     }
 }
 
