--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -495,7 +495,7 @@ h4{
     border-radius: .35rem .5rem .5rem .35rem;
 }
 .html.animar{
-width: 85%;
+width: 100%;
 animation: progressHTML 2s ease both;
 }
 .javascript.animar{
@@ -514,7 +514,7 @@ animation: progresscss 2s ease both;
 
 }
 .wordpress.animar{
-width: 75%;
+width: 90%;
 animation: progreswordpress 2s ease both;
 
 }
@@ -527,7 +527,7 @@ animation: progreswordpress 2s ease both;
     animation: progressgit 2s ease both;
 }
 .sql.animar{
-    width: 85%;
+    width: 90%;
     animation: progressql 2s ease both;
 }
 @keyframes progressHTML {
@@ -535,7 +535,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width:85%;
+        width:100%;
     }
 }
 @keyframes progressjava {
@@ -567,7 +567,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width:75%;
+        width:90%;
     }
 }
 @keyframes progressgit {
@@ -583,7 +583,7 @@ animation: progreswordpress 2s ease both;
         width: 0;
     }
     100%{
-        width: 85%;
+        width: 90%;
     }
 }
 @keyframes progressdesing {
@@ -633,10 +633,14 @@ animation: progreswordpress 2s ease both;
     line-height: 1;
     font-size: 14px;
 }
-.experience-content .years{
+.dev-insti{
+    display: flex;
+}
+
+.experience-content .years,.dev-insti .dev{
     padding-right: .35rem;
 }
-.experience-content .company-name{
+.experience-content .company-name, .name-instituto{
     padding-left: .5rem;
     border-left:solid 1px var(--gray-color);
     text-transform: capitalize;
